k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 5050
      targetPort: 5050
      nodePort: 30050
